--- a/ICT13580030FinalA/ICT13580030FinalA/MainPage.xaml
+++ b/ICT13580030FinalA/ICT13580030FinalA/MainPage.xaml
@@ -11,5 +11,74 @@
             x:Name="newButton"
             Text="New" />
     </ContentPage.ToolbarItems>
+    <ScrollView>
+
+        <ListView
+            x:Name="empListView"
+            RowHeight="300">
+
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+
+                        <ViewCell.ContextActions>
+
+                            <MenuItem
+                                Clicked="Edit_Clicked"
+                                CommandParameter="{Binding .}"
+                                Text="Edit" />
+
+                            <MenuItem
+                                Clicked="Delete_Clicked"
+                                CommandParameter="{Binding .}"
+                                IsDestructive="True"
+                                Text="Delete" />
+
+                        </ViewCell.ContextActions>
+
+                        <StackLayout Padding="10">
+
+
+                            <StackLayout Orientation="Horizontal">
+                                <Label
+                                    FontAttributes="Bold"
+                                    Text="{Binding FirstName}"
+                                    TextColor="Navy" />
+
+                                <Label
+                                    FontAttributes="Bold"
+                                    Text="{Binding LastName}"
+                                    TextColor="Navy" />
+                            </StackLayout>
+
+                            <Label Text="{Binding Age, StringFormat='อายุ {0} ปี'}" />
+
+                            <Label Text="{Binding Gender, StringFormat='เพศ {0}'}" />
+
+                            <Label Text="{Binding Section, StringFormat='แผนก {0}'}" />
+
+                            <Label Text="{Binding Telephone, StringFormat='เบอร์โทร {0}'}" />
+
+                            <Label Text="{Binding Email, StringFormat='Email {0}'}" />
+
+                            <Label
+                                LineBreakMode="TailTruncation"
+                                Text="{Binding Address, StringFormat='ที่อยู่ {0}'}" />
+
+                            <Label Text="{Binding Status, StringFormat='สถานะแต่งงาน {0}'}" />
+
+                            <Label Text="{Binding Children, StringFormat='จำนวนบุตร {0} คน'}" />
+
+                            <Label Text="{Binding Salary, StringFormat='เงินเดือน {0} บาท'}" />
+
+                        </StackLayout>
+
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+        </ListView>
+
+    </ScrollView>
 
 </ContentPage>
